--- a/Windows-10-сборки.css
+++ b/Windows-10-сборки.css
@@ -81,28 +81,91 @@
 }
 
 @media (max-width: 1199px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 4302px;
+  }
+
+  .u-section-1 .u-image-1 {
+    margin-top: 31px;
+    margin-left: auto;
+  }
+
+  .u-section-1 .u-image-2 {
+    margin-top: 13px;
+    margin-right: auto;
+  }
+
+  .u-section-1 .u-image-3 {
+    margin-top: 13px;
+    margin-left: auto;
+  }
+
+  .u-section-1 .u-image-4 {
+    margin-top: 13px;
+    margin-right: auto;
+  }
+
+  .u-section-1 .u-text-3 {
+    margin-top: 36px;
+  }
+
+  .u-section-1 .u-image-5 {
+    margin-left: auto;
+  }
+
+  .u-section-1 .u-image-6 {
+    margin-top: 12px;
+    margin-right: auto;
+  }
+
   .u-section-1 .u-image-7 {
-    margin-left: -1px;
+    margin-top: 13px;
+    margin-left: auto;
   }
 
   .u-section-1 .u-image-8 {
-    margin-left: 376px;
+    margin-top: 12px;
+    margin-right: auto;
+  }
+
+  .u-section-1 .u-text-5 {
+    margin-top: 38px;
   }
 }
 
 @media (max-width: 991px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 4482px;
+  }
+
+  .u-section-1 .u-image-2 {
+    margin-top: 20px;
+  }
+
+  .u-section-1 .u-image-4 {
+    margin-top: 20px;
+  }
+
+  .u-section-1 .u-image-6 {
+    margin-top: 20px;
+  }
+
   .u-section-1 .u-image-7 {
-    margin-left: 0;
+    margin-top: 12px;
   }
 
   .u-section-1 .u-image-8 {
-    margin-left: auto;
+    margin-top: 13px;
+  }
+
+  .u-section-1 .u-text-5 {
+    margin-top: 46px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 2827px;
+    min-height: 4361px;
   }
 
   .u-section-1 .u-text-1 {
@@ -118,7 +181,6 @@
   .u-section-1 .u-image-2 {
     width: 540px;
     height: 300px;
-    margin-top: -303px;
   }
 
   .u-section-1 .u-image-3 {
@@ -129,8 +191,6 @@
   .u-section-1 .u-image-4 {
     width: 540px;
     height: 303px;
-    margin-top: -303px;
-    margin-right: 0;
   }
 
   .u-section-1 .u-image-5 {
@@ -141,7 +201,6 @@
   .u-section-1 .u-image-6 {
     width: 540px;
     height: 303px;
-    margin-top: -306px;
   }
 
   .u-section-1 .u-image-7 {
@@ -153,14 +212,13 @@
   .u-section-1 .u-image-8 {
     width: 540px;
     height: 303px;
-    margin-top: -306px;
-    margin-right: 0;
+    margin-top: 20px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1930px;
+    min-height: 3464px;
   }
 
   .u-section-1 .u-text-1 {
@@ -181,7 +239,6 @@
   .u-section-1 .u-image-2 {
     width: 340px;
     height: 189px;
-    margin-top: -191px;
   }
 
   .u-section-1 .u-image-3 {
@@ -192,7 +249,6 @@
   .u-section-1 .u-image-4 {
     width: 340px;
     height: 191px;
-    margin-top: -191px;
   }
 
   .u-section-1 .u-image-5 {
@@ -203,7 +259,6 @@
   .u-section-1 .u-image-6 {
     width: 340px;
     height: 191px;
-    margin-top: -193px;
   }
 
   .u-section-1 .u-image-7 {
@@ -214,6 +269,5 @@
   .u-section-1 .u-image-8 {
     width: 340px;
     height: 191px;
-    margin-top: -193px;
   }
 }
