--- a/Windows-81-сборки.css
+++ b/Windows-81-сборки.css
@@ -43,6 +43,54 @@
   margin: 31px auto 59px;
 }
 
+@media (max-width: 1199px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 2245px;
+  }
+
+  .u-section-1 .u-image-1 {
+    margin-left: auto;
+  }
+
+  .u-section-1 .u-image-2 {
+    margin-top: 12px;
+    margin-right: auto;
+    margin-left: 185px;
+  }
+
+  .u-section-1 .u-image-3 {
+    margin-left: auto;
+  }
+
+  .u-section-1 .u-image-4 {
+    margin-top: 12px;
+    margin-right: auto;
+    margin-left: 185px;
+  }
+
+  .u-section-1 .u-text-3 {
+    margin-top: 47px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 2311px;
+  }
+
+  .u-section-1 .u-image-2 {
+    margin-left: auto;
+  }
+
+  .u-section-1 .u-image-4 {
+    margin-left: auto;
+  }
+
+  .u-section-1 .u-text-3 {
+    margin-top: 63px;
+  }
+}
+
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
     min-height: 1513px;
@@ -56,7 +104,8 @@
   .u-section-1 .u-image-2 {
     width: 540px;
     height: 307px;
-    margin-top: -300px;
+    margin-top: 20px;
+    margin-bottom: initial;
   }
 
   .u-section-1 .u-image-3 {
@@ -67,7 +116,8 @@
   .u-section-1 .u-image-4 {
     width: 540px;
     height: 310px;
-    margin-top: -303px;
+    margin-top: 20px;
+    margin-bottom: initial;
   }
 }
 
@@ -89,7 +139,6 @@
   .u-section-1 .u-image-2 {
     width: 340px;
     height: 193px;
-    margin-top: -189px;
   }
 
   .u-section-1 .u-image-3 {
@@ -100,6 +149,5 @@
   .u-section-1 .u-image-4 {
     width: 340px;
     height: 195px;
-    margin-top: -191px;
   }
 }
