--- a/Сборки-от-Аддерли.css
+++ b/Сборки-от-Аддерли.css
@@ -1,101 +1,181 @@
 .u-section-1 .u-sheet-1 {
-  min-height: 504px;
+  min-height: 609px;
 }
 
 .u-section-1 .u-text-1 {
-  margin: 60px auto 0;
-}
-
-.u-section-1 .u-list-1 {
-  width: 675px;
-  margin: 0 auto 60px;
-}
-
-.u-section-1 .u-repeater-1 {
-  min-height: 133px;
-  grid-template-columns: calc(33.3333% - 2px) calc(33.3333% - 2px) calc(33.3333% - 2px);
-  grid-gap: 3px 3px;
-}
-
-.u-section-1 .u-container-layout-1 {
-  padding: 10px 0;
+  margin: 167px auto 0;
 }
 
 .u-section-1 .u-btn-1 {
   background-image: none;
-  margin: 0 auto;
-  padding: 10px 29px 10px 28px;
-}
-
-.u-section-1 .u-container-layout-2 {
-  padding: 10px 0;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  margin: 11px auto 0 214px;
+  padding: 10px 45px 10px 43px;
 }
 
 .u-section-1 .u-btn-2 {
   background-image: none;
-  border-style: solid;
-  margin: 0 auto;
-  padding: 10px 29px 10px 28px;
-}
-
-.u-section-1 .u-container-layout-3 {
-  padding: 10px 0;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  margin: -45px auto 0;
+  padding: 10px 37px 10px 36px;
 }
 
 .u-section-1 .u-btn-3 {
   background-image: none;
-  margin: 0 auto;
-  padding: 10px 29px 10px 28px;
-}
-
-.u-section-1 .u-container-layout-4 {
-  padding: 10px 0;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  margin: -45px 214px 0 auto;
+  padding: 10px 37px 10px 36px;
 }
 
 .u-section-1 .u-btn-4 {
   background-image: none;
-  margin: 0 auto;
-  padding: 10px 29px 10px 28px;
-}
-
-.u-section-1 .u-container-layout-5 {
-  padding: 10px 0;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  margin: 11px auto 0 216px;
+  padding: 10px 39px 10px 38px;
 }
 
 .u-section-1 .u-btn-5 {
   background-image: none;
-  margin: 0 auto;
-  padding: 10px 29px 10px 28px;
-}
-
-.u-section-1 .u-container-layout-6 {
-  padding: 10px 0;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  margin: -45px auto 0;
+  padding: 10px 39px 10px 38px;
 }
 
 .u-section-1 .u-btn-6 {
-  margin: 0 auto;
-  padding: 10px 29px 10px 28px;
+  background-image: none;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  margin: -45px auto 0 696px;
+  padding: 10px 36px 10px 35px;
+}
+
+.u-section-1 .u-text-2 {
+  margin: 216px auto 17px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-1 .u-btn-1 {
+    margin-left: 134px;
+  }
+
+  .u-section-1 .u-btn-2 {
+    margin-right: 335px;
+  }
+
+  .u-section-1 .u-btn-3 {
+    margin-right: 94px;
+  }
+
+  .u-section-1 .u-btn-4 {
+    margin-left: 134px;
+  }
+
+  .u-section-1 .u-btn-5 {
+    margin-right: 335px;
+  }
+
+  .u-section-1 .u-btn-6 {
+    margin-right: 94px;
+    margin-left: auto;
+  }
 }
 
 @media (max-width: 991px) {
-  .u-section-1 .u-repeater-1 {
-    min-height: 299px;
-    grid-template-columns: calc(50% - 1.5px) calc(50% - 1.5px);
+  .u-section-1 .u-text-1 {
+    width: auto;
+    margin-left: 24px;
+    margin-right: 24px;
+  }
+
+  .u-section-1 .u-btn-1 {
+    margin-left: 125px;
+  }
+
+  .u-section-1 .u-btn-2 {
+    margin-right: 115px;
+    margin-left: 366px;
+  }
+
+  .u-section-1 .u-btn-3 {
+    margin-top: 11px;
+    margin-right: auto;
+    margin-left: 366px;
+  }
+
+  .u-section-1 .u-btn-4 {
+    margin-top: -45px;
+    margin-left: 125px;
+  }
+
+  .u-section-1 .u-btn-5 {
+    margin-top: 8px;
+    margin-right: 115px;
+    margin-left: 125px;
+  }
+
+  .u-section-1 .u-btn-6 {
+    margin-right: 0;
+    margin-left: 366px;
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-1 .u-list-1 {
-    width: 540px;
+  .u-section-1 .u-btn-1 {
+    margin-top: 9px;
+    margin-left: auto;
   }
 
-  .u-section-1 .u-repeater-1 {
-    grid-template-columns: 100%;
+  .u-section-1 .u-btn-2 {
+    margin-top: 9px;
+    margin-left: auto;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-btn-3 {
+    margin-top: 9px;
+    margin-left: 186px;
+  }
+
+  .u-section-1 .u-btn-4 {
+    margin-top: 9px;
+    margin-left: auto;
+  }
+
+  .u-section-1 .u-btn-5 {
+    margin-top: 9px;
+    margin-left: auto;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-btn-6 {
+    margin-top: 9px;
+    margin-left: 186px;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-1 .u-list-1 {
-    width: 340px;
+  .u-section-1 .u-btn-1 {
+    margin-top: 13px;
+  }
+
+  .u-section-1 .u-btn-2 {
+    margin-top: 10px;
+  }
+
+  .u-section-1 .u-btn-3 {
+    margin-top: 13px;
+    margin-left: 0;
+  }
+
+  .u-section-1 .u-btn-4 {
+    margin-top: 10px;
+  }
+
+  .u-section-1 .u-btn-5 {
+    margin-top: 10px;
+  }
+
+  .u-section-1 .u-btn-6 {
+    margin-top: 10px;
+    margin-left: auto;
   }
 }
