--- a/Контакты.css
+++ b/Контакты.css
@@ -4,30 +4,30 @@
 
 .u-section-1 .u-btn-1 {
   align-self: center;
-  margin: 60px auto 0 51px;
+  margin: 210px auto 0 141px;
 }
 
 .u-section-1 .u-btn-2 {
   align-self: center;
-  margin: -45px auto 0 322px;
+  margin: -45px auto 0 412px;
 }
 
 .u-section-1 .u-btn-3 {
   align-self: center;
-  margin: -45px auto 0 703px;
+  margin: -45px auto 0 696px;
   padding: 10px 29px 10px 27px;
 }
 
 .u-section-1 .u-btn-4 {
   background-image: none;
   align-self: center;
-  margin: 23px auto 0 51px;
+  margin: 19px auto 0 114px;
 }
 
 .u-section-1 .u-btn-5 {
   background-image: none;
   align-self: center;
-  margin: -45px auto 0 703px;
+  margin: -45px auto 0 724px;
   padding: 10px 30px 10px 29px;
 }
 
@@ -35,7 +35,7 @@
   background-image: none;
   font-size: 0.875rem;
   align-self: center;
-  margin: -45px auto 0 343px;
+  margin: -45px auto 0 406px;
   padding: 11px 23px 12px 22px;
 }
 
@@ -47,35 +47,34 @@
 
 @media (max-width: 1199px) {
   .u-section-1 .u-btn-1 {
-    margin-left: 159px;
+    margin-left: 32px;
   }
 
   .u-section-1 .u-btn-2 {
-    margin-left: 421px;
+    margin-left: 294px;
   }
 
   .u-section-1 .u-btn-3 {
-    margin-top: 11px;
+    margin-right: 59px;
     margin-left: auto;
   }
 
   .u-section-1 .u-btn-4 {
-    margin-top: 11px;
-    margin-left: 150px;
+    margin-left: 170px;
   }
 
   .u-section-1 .u-btn-5 {
-    margin-top: 11px;
-    margin-left: auto;
+    margin-left: 469px;
   }
 
   .u-section-1 .u-btn-6 {
-    margin-top: -101px;
-    margin-left: 441px;
+    margin-top: 19px;
+    margin-left: 561px;
   }
 
   .u-section-1 .u-btn-7 {
-    margin-top: 67px;
+    margin-top: -45px;
+    margin-left: 81px;
     padding-right: 122px;
     padding-left: 121px;
   }
@@ -83,46 +82,84 @@
 
 @media (max-width: 991px) {
   .u-section-1 .u-btn-1 {
-    margin-left: auto;
+    margin-top: 187px;
+    margin-left: 376px;
   }
 
   .u-section-1 .u-btn-2 {
-    margin-top: 11px;
-    margin-left: auto;
+    margin-left: 93px;
+  }
+
+  .u-section-1 .u-btn-3 {
+    margin-top: 19px;
+    margin-right: auto;
+    margin-left: 57px;
   }
 
   .u-section-1 .u-btn-4 {
-    margin-left: 186px;
+    margin-top: 13px;
+    margin-left: 80px;
+  }
+
+  .u-section-1 .u-btn-5 {
+    margin-top: -103px;
+    margin-right: 42px;
+    margin-left: auto;
   }
 
   .u-section-1 .u-btn-6 {
+    margin-top: 13px;
+    margin-right: 46px;
+    margin-left: auto;
+  }
+
+  .u-section-1 .u-btn-7 {
+    margin-top: 13px;
     margin-left: auto;
   }
 }
 
 @media (max-width: 767px) {
+  .u-section-1 .u-btn-1 {
+    margin-top: 123px;
+    margin-left: auto;
+  }
+
+  .u-section-1 .u-btn-2 {
+    margin-top: 10px;
+    margin-left: auto;
+  }
+
+  .u-section-1 .u-btn-3 {
+    margin-top: 10px;
+    margin-left: auto;
+  }
+
   .u-section-1 .u-btn-4 {
-    margin-left: 96px;
+    margin-top: 65px;
+    margin-left: auto;
+  }
+
+  .u-section-1 .u-btn-5 {
+    margin-top: -100px;
+    margin-right: auto;
+  }
+
+  .u-section-1 .u-btn-6 {
+    margin-top: 67px;
+    margin-right: auto;
   }
 
   .u-section-1 .u-btn-7 {
-    padding-right: 17px;
+    margin-top: 10px;
     padding-left: 17px;
+    padding-right: 17px;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-1 .u-btn-2 {
-    margin-left: 32px;
-  }
-
-  .u-section-1 .u-btn-4 {
-    margin-left: -4px;
-  }
-
   .u-section-1 .u-btn-6 {
-    margin-left: -4px;
-    margin-right: -4px;
+    margin-top: 65px;
   }
 
   .u-section-1 .u-btn-7 {
