--- a/Windows-10-сборки.css
+++ b/Windows-10-сборки.css
@@ -1,5 +1,5 @@
 .u-section-1 .u-sheet-1 {
-  min-height: 2948px;
+  min-height: 3055px;
 }
 
 .u-section-1 .u-text-1 {
@@ -77,36 +77,43 @@
 
 .u-section-1 .u-btn-2 {
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 31px auto;
+  margin: 31px auto 0;
+}
+
+.u-section-1 .u-text-6 {
+  margin: 31px auto 0;
+}
+
+.u-section-1 .u-btn-3 {
+  margin: 0 auto 0 347px;
+  padding: 10px 37px;
+}
+
+.u-section-1 .u-btn-4 {
+  margin: -45px auto 37px 577px;
 }
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 4302px;
+    min-height: 4457px;
   }
 
   .u-section-1 .u-image-1 {
-    margin-top: 31px;
     margin-left: auto;
   }
 
   .u-section-1 .u-image-2 {
-    margin-top: 13px;
+    margin-top: 20px;
     margin-right: auto;
   }
 
   .u-section-1 .u-image-3 {
-    margin-top: 13px;
     margin-left: auto;
   }
 
   .u-section-1 .u-image-4 {
-    margin-top: 13px;
+    margin-top: 20px;
     margin-right: auto;
-  }
-
-  .u-section-1 .u-text-3 {
-    margin-top: 36px;
   }
 
   .u-section-1 .u-image-5 {
@@ -114,58 +121,43 @@
   }
 
   .u-section-1 .u-image-6 {
-    margin-top: 12px;
+    margin-top: 20px;
     margin-right: auto;
   }
 
   .u-section-1 .u-image-7 {
-    margin-top: 13px;
     margin-left: auto;
   }
 
   .u-section-1 .u-image-8 {
-    margin-top: 12px;
+    margin-top: 20px;
     margin-right: auto;
   }
 
-  .u-section-1 .u-text-5 {
-    margin-top: 38px;
+  .u-section-1 .u-btn-3 {
+    margin-left: auto;
+  }
+
+  .u-section-1 .u-btn-4 {
+    margin-top: 6px;
+    margin-left: auto;
+    margin-bottom: 34px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 4482px;
+    min-height: 4624px;
   }
 
-  .u-section-1 .u-image-2 {
-    margin-top: 20px;
-  }
-
-  .u-section-1 .u-image-4 {
-    margin-top: 20px;
-  }
-
-  .u-section-1 .u-image-6 {
-    margin-top: 20px;
-  }
-
-  .u-section-1 .u-image-7 {
-    margin-top: 12px;
-  }
-
-  .u-section-1 .u-image-8 {
-    margin-top: 13px;
-  }
-
-  .u-section-1 .u-text-5 {
-    margin-top: 46px;
+  .u-section-1 .u-btn-4 {
+    margin-bottom: 51px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 4361px;
+    min-height: 4503px;
   }
 
   .u-section-1 .u-text-1 {
@@ -212,13 +204,16 @@
   .u-section-1 .u-image-8 {
     width: 540px;
     height: 303px;
-    margin-top: 20px;
+  }
+
+  .u-section-1 .u-btn-3 {
+    margin-left: 162px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 3464px;
+    min-height: 3606px;
   }
 
   .u-section-1 .u-text-1 {
@@ -269,5 +264,9 @@
   .u-section-1 .u-image-8 {
     width: 340px;
     height: 191px;
+  }
+
+  .u-section-1 .u-btn-3 {
+    margin-left: 62px;
   }
 }
