--- a/nicepage.css
+++ b/nicepage.css
@@ -37586,12 +37586,12 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-footer .u-sheet-1 {
-  min-height: 142px;
+  min-height: 82px;
 }
 
 .u-footer .u-text-1 {
   width: 417px;
-  margin: 47px auto 51px;
+  margin: 19px auto;
 }
 @media (max-width: 1199px) {
   .u-footer .u-sheet-1 {
