--- a/Сборки-от-Аддерли.css
+++ b/Сборки-от-Аддерли.css
@@ -1,5 +1,5 @@
 .u-section-1 .u-sheet-1 {
-  min-height: 603px;
+  min-height: 597px;
 }
 
 .u-section-1 .u-text-1 {
@@ -49,49 +49,47 @@
 }
 
 .u-section-1 .u-text-2 {
-  margin: 140px auto 31px;
+  margin: 140px auto 25px;
 }
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 610px;
+    min-height: 633px;
   }
 
   .u-section-1 .u-btn-1 {
-    margin-left: 225px;
+    margin-top: 17px;
+    margin-left: 233px;
   }
 
   .u-section-1 .u-btn-2 {
-    margin-right: 240px;
-    margin-left: 375px;
+    margin-left: 478px;
   }
 
   .u-section-1 .u-btn-3 {
-    margin-left: 225px;
+    margin-left: 233px;
   }
 
   .u-section-1 .u-btn-4 {
-    margin-right: 240px;
-    margin-left: 375px;
+    margin-left: 478px;
   }
 
   .u-section-1 .u-btn-5 {
-    margin-left: 225px;
+    margin-left: 233px;
   }
 
   .u-section-1 .u-btn-6 {
-    margin-right: 240px;
-    margin-left: 375px;
+    margin-left: 478px;
   }
 
   .u-section-1 .u-text-2 {
-    margin-top: 176px;
+    margin-top: 174px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 694px;
+    min-height: 719px;
   }
 
   .u-section-1 .u-text-1 {
@@ -101,36 +99,34 @@
   }
 
   .u-section-1 .u-btn-1 {
-    margin-left: 129px;
+    margin-top: 25px;
+    margin-left: 122px;
   }
 
   .u-section-1 .u-btn-2 {
-    margin-right: 124px;
-    margin-left: 155px;
+    margin-left: 368px;
   }
 
   .u-section-1 .u-btn-3 {
     margin-top: 11px;
-    margin-left: 130px;
+    margin-left: 123px;
   }
 
   .u-section-1 .u-btn-4 {
-    margin-right: 124px;
-    margin-left: 155px;
+    margin-left: 368px;
   }
 
   .u-section-1 .u-btn-5 {
     margin-top: 11px;
-    margin-left: 130px;
+    margin-left: 123px;
   }
 
   .u-section-1 .u-btn-6 {
-    margin-right: 124px;
-    margin-left: 155px;
+    margin-left: 368px;
   }
 
   .u-section-1 .u-text-2 {
-    margin-top: 256px;
+    margin-top: 248px;
   }
 }
 
@@ -146,7 +142,6 @@
 
   .u-section-1 .u-btn-2 {
     margin-top: 63px;
-    margin-right: auto;
     margin-left: 283px;
   }
 
@@ -157,7 +152,6 @@
 
   .u-section-1 .u-btn-4 {
     margin-top: -99px;
-    margin-right: auto;
     margin-left: 283px;
   }
 
@@ -168,7 +162,6 @@
 
   .u-section-1 .u-btn-6 {
     margin-top: -99px;
-    margin-right: auto;
     margin-left: 283px;
   }
 
@@ -190,7 +183,7 @@
 
   .u-section-1 .u-btn-2 {
     margin-top: 230px;
-    margin-left: 0;
+    margin-left: auto;
   }
 
   .u-section-1 .u-btn-3 {
@@ -200,7 +193,7 @@
 
   .u-section-1 .u-btn-4 {
     margin-top: 10px;
-    margin-left: 0;
+    margin-left: auto;
   }
 
   .u-section-1 .u-btn-5 {
@@ -210,7 +203,7 @@
 
   .u-section-1 .u-btn-6 {
     margin-top: 10px;
-    margin-left: 0;
+    margin-left: auto;
   }
 
   .u-section-1 .u-text-2 {
