--- a/Windows-7-сборки.css
+++ b/Windows-7-сборки.css
@@ -66,7 +66,7 @@
 
 .u-section-1 .u-btn-3 {
   margin: -45px auto 31px 576px;
-  padding: 9px 33px 11px 32px;
+  padding: 10px 32px;
 }
 
 @media (max-width: 1199px) {
