--- a/Windows-8-1-сборки.css
+++ b/Windows-8-1-сборки.css
@@ -105,7 +105,7 @@
   }
 
   .u-section-1 .u-btn-3 {
-    margin: 11px 0 29px auto;
+    margin: 11px auto 29px;
   }
 }
 
@@ -135,8 +135,8 @@
   }
 
   .u-section-1 .u-btn-3 {
-    margin-bottom: 31px;
-    padding-right: 36px;
+    margin-top: 7px;
+    margin-bottom: 44px;
   }
 }
 
@@ -168,5 +168,10 @@
   .u-section-1 .u-image-4 {
     width: 340px;
     height: 195px;
+  }
+
+  .u-section-1 .u-btn-3 {
+    margin-top: 9px;
+    margin-bottom: 42px;
   }
 }
