--- a/Сборки-от-Аддерли.css
+++ b/Сборки-от-Аддерли.css
@@ -1,5 +1,5 @@
 .u-section-1 .u-sheet-1 {
-  min-height: 597px;
+  min-height: 927px;
 }
 
 .u-section-1 .u-text-1 {
@@ -49,14 +49,34 @@
 }
 
 .u-section-1 .u-text-2 {
-  margin: 140px auto 25px;
+  font-weight: 700;
+  font-size: 1.5rem;
+  margin: 83px 81px 0;
+}
+
+.u-section-1 .u-text-3 {
+  margin: 0 auto;
+}
+
+.u-section-1 .u-text-4 {
+  font-size: 3rem;
+  font-weight: 700;
+  margin: 88px auto 0;
+}
+
+.u-section-1 .u-text-5 {
+  font-size: 1.25rem;
+  margin: 0 auto;
+}
+
+.u-section-1 .u-text-6 {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 60px;
+  font-size: 1.875rem;
 }
 
 @media (max-width: 1199px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 633px;
-  }
-
   .u-section-1 .u-btn-1 {
     margin-top: 17px;
     margin-left: 233px;
@@ -83,15 +103,29 @@
   }
 
   .u-section-1 .u-text-2 {
-    margin-top: 174px;
+    margin-top: 45px;
+  }
+
+  .u-section-1 .u-text-3 {
+    width: auto;
+  }
+
+  .u-section-1 .u-text-4 {
+    width: auto;
+    margin-top: 63px;
+  }
+
+  .u-section-1 .u-text-5 {
+    width: auto;
+  }
+
+  .u-section-1 .u-text-6 {
+    width: auto;
+    margin-top: 0;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 719px;
-  }
-
   .u-section-1 .u-text-1 {
     width: auto;
     margin-left: 24px;
@@ -126,13 +160,18 @@
   }
 
   .u-section-1 .u-text-2 {
-    margin-top: 248px;
+    margin-top: 119px;
+  }
+
+  .u-section-1 .u-text-5 {
+    margin-left: 6px;
+    margin-right: 6px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 857px;
+    min-height: 1051px;
   }
 
   .u-section-1 .u-btn-1 {
@@ -166,14 +205,35 @@
   }
 
   .u-section-1 .u-text-2 {
-    margin-top: 432px;
-    margin-bottom: 17px;
+    width: auto;
+    margin-top: 134px;
+    margin-right: 75px;
+    margin-left: 87px;
+  }
+
+  .u-section-1 .u-text-3 {
+    margin-top: 19px;
+  }
+
+  .u-section-1 .u-text-4 {
+    margin-top: 106px;
+    margin-right: 29px;
+    margin-left: 41px;
+  }
+
+  .u-section-1 .u-text-5 {
+    margin-left: 12px;
+  }
+
+  .u-section-1 .u-text-6 {
+    margin-right: 63px;
+    margin-bottom: 34px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 898px;
+    min-height: 1406px;
   }
 
   .u-section-1 .u-btn-1 {
@@ -207,7 +267,29 @@
   }
 
   .u-section-1 .u-text-2 {
-    margin-top: 255px;
-    margin-bottom: 42px;
+    margin-top: 92px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-text-3 {
+    margin-top: -7px;
+    margin-left: 16px;
+    margin-right: 16px;
+  }
+
+  .u-section-1 .u-text-4 {
+    margin-top: 99px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-text-5 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-text-6 {
+    margin: 10px 0 60px;
   }
 }
