--- a/Сборки-от-Аддерли.css
+++ b/Сборки-от-Аддерли.css
@@ -1,5 +1,5 @@
 .u-section-1 .u-sheet-1 {
-  min-height: 927px;
+  min-height: 951px;
 }
 
 .u-section-1 .u-text-1 {
@@ -72,7 +72,7 @@
 .u-section-1 .u-text-6 {
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 60px;
+  margin-bottom: 48px;
   font-size: 1.875rem;
 }
 
@@ -103,6 +103,7 @@
   }
 
   .u-section-1 .u-text-2 {
+    width: auto;
     margin-top: 45px;
   }
 
@@ -160,7 +161,10 @@
   }
 
   .u-section-1 .u-text-2 {
+    width: 558px;
     margin-top: 119px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .u-section-1 .u-text-5 {
@@ -205,10 +209,8 @@
   }
 
   .u-section-1 .u-text-2 {
-    width: auto;
+    width: 378px;
     margin-top: 134px;
-    margin-right: 75px;
-    margin-left: 87px;
   }
 
   .u-section-1 .u-text-3 {
@@ -217,16 +219,16 @@
 
   .u-section-1 .u-text-4 {
     margin-top: 106px;
-    margin-right: 29px;
-    margin-left: 41px;
+    margin-left: 35px;
+    margin-right: 35px;
   }
 
   .u-section-1 .u-text-5 {
-    margin-left: 12px;
+    margin-left: 9px;
+    margin-right: 9px;
   }
 
   .u-section-1 .u-text-6 {
-    margin-right: 63px;
     margin-bottom: 34px;
   }
 }
@@ -267,9 +269,8 @@
   }
 
   .u-section-1 .u-text-2 {
+    width: 340px;
     margin-top: 92px;
-    margin-left: 0;
-    margin-right: 0;
   }
 
   .u-section-1 .u-text-3 {
@@ -290,6 +291,6 @@
   }
 
   .u-section-1 .u-text-6 {
-    margin: 10px 0 60px;
+    margin: 10px 0 48px;
   }
 }
