--- a/Windows-8-0-сборки.css
+++ b/Windows-8-0-сборки.css
@@ -1,5 +1,9 @@
+ .u-section-1 {
+  background-image: none;
+}
+
 .u-section-1 .u-sheet-1 {
-  min-height: 500px;
+  min-height: 1100px;
 }
 
 .u-section-1 .u-text-1 {
@@ -7,5 +11,15 @@
 }
 
 .u-section-1 .u-text-2 {
-  margin: 116px auto 60px;
+  margin: 13px auto 0;
+}
+
+.u-section-1 .u-text-3 {
+  margin: 82px auto 0;
+}
+
+.u-section-1 .u-text-4 {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 60px;
 }
