--- a/Windows-8-1-сборки.css
+++ b/Windows-8-1-сборки.css
@@ -1,5 +1,9 @@
+ .u-section-1 {
+  background-image: none;
+}
+
 .u-section-1 .u-sheet-1 {
-  min-height: 1641px;
+  min-height: 1686px;
 }
 
 .u-section-1 .u-text-1 {
@@ -40,19 +44,24 @@
 
 .u-section-1 .u-btn-1 {
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 31px auto 0;
+  margin: 31px auto 0 277px;
+}
+
+.u-section-1 .u-btn-2 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  margin: -45px auto 0 617px;
 }
 
 .u-section-1 .u-text-4 {
   margin: 31px auto 0;
 }
 
-.u-section-1 .u-btn-2 {
-  margin: 0 auto 0 351px;
+.u-section-1 .u-btn-3 {
+  margin: 0 auto;
 }
 
-.u-section-1 .u-btn-3 {
-  margin: -45px 357px 31px auto;
+.u-section-1 .u-btn-4 {
+  margin: 11px auto 20px;
   padding: 10px 35px;
 }
 
@@ -75,19 +84,18 @@
     margin-left: 185px;
   }
 
-  .u-section-1 .u-btn-2 {
-    margin-left: 256px;
+  .u-section-1 .u-btn-1 {
+    margin-left: 177px;
   }
 
-  .u-section-1 .u-btn-3 {
-    margin-right: 157px;
-    margin-left: 481px;
+  .u-section-1 .u-btn-2 {
+    margin-left: 517px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 2422px;
+    min-height: 2393px;
   }
 
   .u-section-1 .u-image-2 {
@@ -100,18 +108,27 @@
     margin-left: auto;
   }
 
-  .u-section-1 .u-btn-2 {
-    margin-left: auto;
+  .u-section-1 .u-btn-1 {
+    margin-left: 67px;
   }
 
-  .u-section-1 .u-btn-3 {
-    margin: 11px auto 29px;
+  .u-section-1 .u-btn-2 {
+    margin-left: 406px;
+  }
+
+  .u-section-1 .u-text-4 {
+    width: auto;
+    margin-top: 20px;
+  }
+
+  .u-section-1 .u-btn-4 {
+    margin-bottom: 11px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 2454px;
+    min-height: 2472px;
   }
 
   .u-section-1 .u-image-1 {
@@ -134,20 +151,34 @@
     height: 310px;
   }
 
-  .u-section-1 .u-btn-3 {
+  .u-section-1 .u-btn-1 {
+    margin-left: auto;
+  }
+
+  .u-section-1 .u-btn-2 {
+    margin-top: 12px;
+    margin-left: auto;
+  }
+
+  .u-section-1 .u-text-4 {
+    margin-top: 16px;
+  }
+
+  .u-section-1 .u-btn-4 {
     margin-top: 7px;
-    margin-bottom: 44px;
+    margin-bottom: 20px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 2154px;
+    min-height: 2170px;
   }
 
   .u-section-1 .u-text-2 {
-    margin-left: 15px;
-    margin-right: 15px;
+    width: auto;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-image-1 {
@@ -170,8 +201,8 @@
     height: 195px;
   }
 
-  .u-section-1 .u-btn-3 {
+  .u-section-1 .u-btn-4 {
     margin-top: 9px;
-    margin-bottom: 42px;
+    margin-bottom: 16px;
   }
 }
