--- a/Windows-Lite-сборки.css
+++ b/Windows-Lite-сборки.css
@@ -1,5 +1,9 @@
+ .u-section-1 {
+  background-image: none;
+}
+
 .u-section-1 .u-sheet-1 {
-  min-height: 500px;
+  min-height: 900px;
 }
 
 .u-section-1 .u-text-1 {
